# MeshFix-V2.1

./: .gitignore  CMakeLists.txt
cmake/: Macros.cmake
include/Kernel/: basics.h  heap.h
src/: CMakeLists.txt
src/Algorithms/: checkAndRepair.cpp
src/Kernel/: heap.cpp  tmesh.cpp
src/MeshFix/: meshfix.cpp
src/TMesh/: io.cpp
